--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -40,5 +40,8 @@ models:
     # Applies to all files under models/example/
     example:
       +materialized: table
+    
     dim:
       +materialized: table
+    src:
+      +materialized: ephemeral
